# Project-xlogin-java

./: .gitignore  BUILD_DEPLOYMENT_GUIDE.md  BUILD_DIRECT_MSVC.ps1  COMPILATION_STATUS.md  DOCUMENTATION_INDEX.md  GAME_SYSTEM_README.md  GUIA_MYSQL_PASSO_A_PASSO.txt  GameLauncher.java  LEIA-ME-PRIMEIRO.txt  PasswordHasher.java  Project-xlogin-java.sln  README.md  README_DESENVOLVIMENTO.md  RESUMO_VISUAL.md  SETUP_BUILD.ps1  SETUP_BUILD_PORTABLE.ps1  VISUAL_SUMMARY.md  Xlogin.java  Xregister.java  _2_Consulta_Completa_de_Verificação_Inner_Join_Esta_consulta_mos_202602131516.json  build.gradle  instalar_jars.bat  item_generator.py  kronus_local.db  main.py  setup_banco.sql  user_create.py  verify_schema.py
KronusLobby/: App.axaml  App.axaml.cs  Character.cs  KronusLobby.csproj  Program.cs  ViewLocator.cs  app.manifest
KronusLobby/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
KronusLobby/Views/: MainWindow.axaml  MainWindow.axaml.cs
c_game/: CMakeLists.txt  README_GAME_ENGINE.md
c_game/include/entities/: Ability.hpp  Enemy.hpp  Player.hpp
c_game/include/game/: Game.hpp  GameState.hpp  GameWorld.hpp
c_game/include/systems/: CombatSystem.hpp  InputHandler.hpp  NetworkClient.hpp  PathFinding.hpp
c_game/include/ui/: HUD.hpp  UIManager.hpp
c_game/include/util/: AssetManager.hpp  Logger.hpp
c_game/src/: main.cpp  main_simple.cpp
c_game/src/entities/: Ability.cpp  Enemy.cpp  Player.cpp
c_game/src/game/: Game.cpp  GameState.cpp  GameWorld.cpp
c_game/src/systems/: CombatSystem.cpp  InputHandler.cpp  NetworkClient.cpp  PathFinding.cpp
c_game/src/ui/: HUD.cpp  UIManager.cpp
c_game/src/util/: AssetManager.cpp  Logger.cpp
c_lobby/: CMakeLists.txt
c_lobby/src/: main.cpp
config/checkstyle/: checkstyle.xml
kronus_data/: characters.db  characters.db-shm  characters.db-wal
md/: 00_COMECE_AQUI.md  C_PLUS_PLUS_GAME_INTEGRATION.md  DOCUMENTACAO_CRIADA.md  ESTRUTURA_PROJETO.md  GUIA_DESENVOLVIMENTO.md  GUIA_INTEGRACAO_JAVA_CPP.md  GUIA_TESTE.md  IMPLEMENTACAO_CONCLUIDA.md  INDICE_DOCUMENTACAO.md  RESUMO_ESCALACAO_COMPLETA.md  START_HERE.md  TESTE_RAPIDO.md  VISUAL_HABILIDADES.md
model/: User.java
old/: GameLauncher.java  PasswordHasher.java  Xlogin.java  Xregister.java
res/: README_ASSETS.md
scripts/: admin_tool.py  item_generator.py  user_create.py
service/: GameLauncher.java  RegistrationService.java
src/dao/: UserDao.java
src/game/: GameWindow.java  GameWorld.java
src/model/: Ability.java  (+3 more)
ui/: Xregister.java
util/: PasswordHasher.java  UIUtils.java
(+30 files in other folders)
